# dfa-dynamics

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-multi-platform.yml  iree-build-multi-platform.yml  iree-build-workflow.md
cmake/: domain_flow-config.cmake.in
data/: test1_tosa.mlir
data/AI-models/CNN/: mobilenet_v1_tosa.dfg
data/dfg/: mobilenet_v2_tosa.dfg
data/dl/convolution/: mobilenet_v2.dfg
data/shlo/: README.md
data/tosa/: conv2d_matmul.md  matmul_computation.md  matmul_spec.md  mobilenet_v2_graph_construction_trace.txt  mobilenet_v2_tosa.dfg  mobilenet_v2_trace.txt  oneLayerMLP.dfg  oneLayerMLP_tosa.dfg  resnet_block.md  resnet_block_2.md  resnet_block_2.mlir  resnet_tosa_plus.md  simple_mlp.mlir  simple_mlp_incorrect.mlir  test1.dfg  test1_graph_trace.txt  test2.md  test2.mlir  test2_construction.txt  test2_graph_trace.txt  test3.md  test3.mlir  test3_graph_trace.txt  test4.mlir  test5.md  test5.mlir  twoLayerMLP.mlir  twoLayerMLP_tosa.dfg
data/workloads/: README.md  install.sh
data/workloads/ctl/: README.md  kalman_filter.dfg
data/workloads/dfa/: README.md  domain_flow.dfg
data/workloads/dnn/: README.md  oneLayerMLP.dfg
data/workloads/dsp/: README.md
data/workloads/nla/: README.md  matmul.dfg  matmul_linear.dfg
databases/: CMakeLists.txt
databases/sql3/: CMakeLists.txt  sql3_test.cpp
docs/: alignment_formalism.md  anchoring.md  branes-ai.md  dfa-opt-example.md  domain_flow_alignment_specification.txt  header-only-release-guidance.md  header-only-release-guidance_claude.md  ideation-of-dfg-technology.md  iree-adaptive-portability.md  iree-architecture.md  iree-compile.md  iree-compiler-architecture.md  iree-configurations.md  iree-hal.md  iree-internal-dialects.md  iree-serialization.md  iree-vmfb-serialization.md  llvm-mlir-opt-history.md  onnx-operators.md  onnx-runtime-architecture.md  onnx-vs-iree.md  pipelining_schedules.md  tensor_structure.md  transformations.md  transformer_building_blocks.md  vcpkg_cgal.md  vertex-enumeration.md
docs/SURE/: QR_decomposition.md  conv2d.md  matmul.md
gists/: convex-polytope-visualization.cpp  imgui-glad-glfw3-starter.cpp
include/dfa/: affine_map.hpp  arithmetic_complexity.hpp  constraint_set.hpp  convex_hull.hpp  dependency_graph.hpp  dfa.hpp  dfa_mlir.hpp  dfg.hpp  domain_flow.hpp  domain_flow_edge.hpp  domain_flow_experiment.hpp  domain_flow_graph.hpp  domain_flow_node.hpp  domain_flow_operator.hpp  domain_of_computation.hpp  edge.hpp  graph.hpp  hyperplane.hpp  index_point.hpp  index_space.hpp  indexspace.hpp  linalg.hpp  matrix.hpp  projection.hpp  recurrence_var.hpp  schedule.hpp  shape_analysis.hpp  simplex_method.hpp  tensor_spec_parser.hpp  vector.hpp  wavefront.hpp
include/dfa/algorithm/shortest_path/: common.hpp  dijkstra.hpp
include/dfa/graph/: graph.hpp
include/dfa/graph/algorithm/shortest_path/: common.hpp  dijkstra.hpp
include/dfa/mlir/: processModule.hpp
include/dfa/mlir/dialect/: tosa.hpp
include/dfa/test_graphs/: matmul_dfg.hpp
include/graph/: graph.hpp
include/graph/algorithm/shortest_path/: common.hpp  dijkstra.hpp
include/graph/base/: graph.hpp
include/util/: data_file.hpp
math/: layers.md
plots/: CMakeLists.txt
plots/pareto/: test.cpp
scripts/: domain_flow_matmul_viz.py  domain_flow_matmul_viz2.py  domain_flow_matmul_viz3.py  domain_flow_matmul_viz4.py  domain_flow_matmul_viz5.py  domain_flow_matmul_viz6.py  interactive_matmul_domain_flow_viz.py  key-input.py  keypress-test.py  matmul_domain_flow_viz.py
sim/: CMakeLists.txt
src/: README.md
src/dfa/: CMakeLists.txt  README.md  affine_map.cpp  dependency_graph.cpp
src/dfa/tests/: CMakeLists.txt  align_example.py  analyze.cpp  batched_matmul_schedule.cpp  builder.cpp  constraint_set.cpp  domain_flow.cpp  domain_of_computation.cpp  graph.cpp  index_space.cpp  linalg.cpp  matmul_schedule.cpp  oneLayerMLP.cpp  strongly_connected.cpp  visualization.cpp
src/graph/tests/: CMakeLists.txt  graph.cpp  oneLayerMLP.cpp
src/json/tests/: CMakeLists.txt  graph.cpp  graph_serialization.cpp  json.cpp
test/mlir/: oneLayerMLP_1x10x10x2_tosa.mlir
tools/: CMakeLists.txt
tools/cli/: CMakeLists.txt  dfa_opt.cpp  matmul.cpp  mlir.cpp  mlir_txt_importer.cpp  mlp.cpp  usage.txt
tools/dfg/: CMakeLists.txt  alignment_experiment.cpp  analyzer.cpp  conv2d_operator.md  convex_hull.cpp  depthwise_conv2d.md  dfg_api.cpp  domain_confluence.cpp  domain_flow.py  domain_flow_complexity.cpp  domain_flow_graph.cpp  domain_flow_node.cpp  domain_of_computation.cpp  edge_enumeration.cpp  graph_walking.cpp  index_space.cpp  numpy_tensor.py  pipeline_alignment.cpp  reduce_sum.md  tensor_extraction.cpp  tensor_product.cpp  tensor_product.md  wavefront.cpp
tools/dfg/tests/: CMakeLists.txt  domain_flow_complexity.cpp  domain_flow_edge.cpp  domain_flow_graph.cpp  domain_flow_node.cpp  domain_flow_operator.cpp  mobilenet_v2.cpp  tensor_extraction.cpp
tools/import/: CMakeLists.txt  dfa_import.cpp
tools/mlir/: CMakeLists.txt  README.md  mlir_bc_converter.cpp  mlir_serialization.cpp
tools/opt/: CMakeLists.txt  dfa_opt.cpp
tools/rdg/: CMakeLists.txt  matmul.cpp  mlp.cpp
tools/tosa/: CMakeLists.txt  analyzer.cpp  dfa_import.cpp  mlir_walk_results.cpp  tosa_mlir.cpp  tosa_parser.cpp
tools/viz/: CMakeLists.txt
viz/: CMakeLists.txt  qt3d_test.cpp  simple.cpp
workloads/: CMakeLists.txt  README.md  woodbury_formula.md
workloads/cnn/: CMakeLists.txt  mobilenet_v1.cpp  mobilenet_v2.cpp
workloads/ctl/: CMakeLists.txt  kalman_filter.cpp
workloads/dfa/: CMakeLists.txt  domain_flow.cpp  matmul_unbatched.cpp
workloads/dnn/: CMakeLists.txt  con2d_mlp.py  flattenMLP.py  flattenSoftMax_MLP.py  oneLayerMLP.cpp
workloads/dsp/: CMakeLists.txt  spectral.cpp
workloads/nla/: AtimesBtimesC_skinny.cpp  AtimesBtimesC_square.cpp  CMakeLists.txt  README.md  chained_matmul.cpp  matmul.cpp  matmul_chained.cpp  matmul_expand_contract.cpp  matmul_linear.cpp  tensor_analysis.md
