# Signal processing compute graphs
add_subdirectory("dsp")
# Numerical Linear Algegra compute graphs
add_subdirectory("nla")
# Domain Flow Architecture compute graphs
add_subdirectory("dfa")
# Deep Neural Network compute graphs
add_subdirectory("dnn")
# Control compute graphs
add_subdirectory("ctl")
